Enable delete option to clean up old server files

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,7 @@ jobs:
         password: ${{ secrets.FTP_PASSWORD }}
         local-dir: ./
         server-dir: /domains/freeed4med.org/public_html/
+        delete: true
         exclude: |
           **/.git*
           **/.git*/**
