Target public_html for Domain-level FTP user

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
         username: FreeEd4MedFTP@freeed4med.org
         password: ${{ secrets.FTP_PASSWORD }}
         local-dir: ./
-        server-dir: /
+        server-dir: /public_html/
         dangerous-clean-slate: true
         exclude: |
           **/.git*
